bin/src/ctl/top/snapshots/sozu__ctl__top__snapshot_tests__snapshot_backends_120x40.snap
---
source: bin/src/ctl/top/snapshot_tests.rs
assertion_line: 257
expression: out
---
╭ BACKENDS · sort: bw desc · 6 backends ───────────────────────────────────────────────────────────────────────────────╮
│cluster                             backend                             bw down/up B ▼   conn   p50    p99    req     │
│queue-worker                        queue-worker-2                      6.0K/24.0K       12     35     120    1536    │
│static-cdn                          static-cdn-2                        4.0K/16.0K       12     35     120    1024    │
│queue-worker                        queue-worker-1                      3.0K/12.0K       12     30     110    768     │
│api-prod                            api-prod-2                          2.0K/8.0K        12     35     120    512     │
│static-cdn                          static-cdn-1                        2.0K/8.0K        12     30     110    512     │
│api-prod                            api-prod-1                          1.0K/4.0K        12     30     110    256     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
