bin/src/ctl/top/snapshots/sozu__ctl__top__snapshot_tests__snapshot_clusters_80x24.snap
---
source: bin/src/ctl/top/snapshot_tests.rs
assertion_line: 221
expression: out
---
╭ CLUSTERS · sort: err% desc · 3 clusters ─────────────────────────────────────╮
│cluster_id                          rps      err % ▼  p50    p99    backends  │
│api-prod                            1768     0.17     35     180    2/2       │
│static-cdn                          3036     0.13     35     200    2/2       │
│queue-worker                        4304     0.12     35     220    0/2       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
