bin/src/ctl/top/snapshots/sozu__ctl__top__snapshot_tests__snapshot_events_empty_80x24.snap
---
source: bin/src/ctl/top/snapshot_tests.rs
expression: out
---
╭ EVENTS · 0 retained ─────────────────────────────────────────────────────────╮
│No events yet. The events thread subscribes on startup; the first BACKEND_UP /│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
