bin/src/ctl/top/snapshots/sozu__ctl__top__snapshot_tests__snapshot_h2_120x40.snap
---
source: bin/src/ctl/top/snapshot_tests.rs
expression: out
---
╭ H2 · streams · flow control · flood mitigations ─────────────────────────────────────────────────────────────────────╮
│24 active H2 streams · 66.7 % of accepts on H2                                                                        │
│metric                                             value            trend (60 s)                                      │
│active streams                                     24               ██                                                │
│H2 connections accepted                            1100             ▇█                                                │
│HTTP/1.1 accepted                                  550              ▇█                                                │
│client.connections (gauge)                         312              ██                                                │
│                                                                                                                      │
│flow control                                       value            trend (60 s)                                      │
│connection.window_bytes                            65535            ██                                                │
│pending_window_updates                             0                ▁▁                                                │
│flow_control_stall                                 2                ██                                                │
│frames.tx.window_update                            42               ██                                                │
│frames.tx.rst_stream                               0                ▁▁                                                │
│frames.tx.goaway                                   0                ▁▁                                                │
│╭ flood mitigations · CVE-2023-44487 / CVE-2024-27316 / CVE-2025-8671 ───────────────────────────────────────────────╮│
││counter                                           value            trend (60 s)                                     ││
││rst_stream_pre_response_lifetime                  0                ▁▁                                               ││
││rst_stream_lifetime                               0                ▁▁                                               ││
││rst_stream_emitted_lifetime                       0                ▁▁                                               ││
││rst_stream_window                                 0                ▁▁                                               ││
││stream_refused                                    0                ▁▁                                               ││
││continuation_per_block                            0                ▁▁                                               ││
││header_size_per_block                             0                ▁▁                                               ││
││ping_window                                       0                ▁▁                                               ││
││ping_lifetime                                     0                ▁▁                                               ││
││settings_window                                   0                ▁▁                                               ││
││settings_lifetime                                 0                ▁▁                                               ││
││empty_data_window                                 0                ▁▁                                               ││
││window_update_stream0_window                      0                ▁▁                                               ││
││glitch_window                                     0                ▁▁                                               ││
││window_update_dropped                             0                ▁▁                                               ││
││rst_stream_dropped                                0                ▁▁                                               ││
││close_with_active_streams                         0                ▁▁                                               ││
││                                                                                                                    ││
││                                                                                                                    ││
││                                                                                                                    ││
││                                                                                                                    ││
│╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
