bin/src/ctl/top/snapshots/sozu__ctl__top__snapshot_tests__snapshot_listeners_empty_80x24.snap
---
source: bin/src/ctl/top/snapshot_tests.rs
expression: out
---
╭ LISTENERS · refresh 5 s · live ──────────────────────────────────────────────╮
│No listeners configured.                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
