bin/src/ctl/top/snapshots/sozu__ctl__top__snapshot_tests__snapshot_overview_120x40.snap
---
source: bin/src/ctl/top/snapshot_tests.rs
assertion_line: 221
expression: out
---
╭ REQUESTS / SEC ──────────────────────────────────────────╮╭ LATENCY p99 (ms) ────────────────────────────────────────╮
│0 req/s                                                   ││220 ms                                                    │
│312 client conns · 87 active sessions · ● 60 s            ││max p99 across clusters · 500 ms threshold · ●            │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││█                                                         │
│                                                          ││█                                                         │
│                                                          ││█                                                         │
│                                                          ││█                                                         │
│                                                          ││█                                                         │
│                                                          ││█                                                         │
│                                                          ││█                                                         │
╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯
╭ SERVICE TIME p99 (ms) ───────────────────────────────────╮╭ SATURATION (%) ──────────────────────────────────────────╮
│12 ms                                                     ││45 %                                                      │
│sozu request-processing p99 · ●                           ││slab/buffer; warn at 80 % · ●                             │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││▁                                                         │
│                                                          ││█                                                         │
│                                                          ││█                                                         │
│                                                          ││█                                                         │
│                                                          ││█                                                         │
│                                                          ││█                                                         │
│                                                          ││█                                                         │
│▃                                                         ││█                                                         │
╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯
