bin/src/ctl/top/snapshots/sozu__ctl__top__snapshot_tests__snapshot_overview_80x24.snap
---
source: bin/src/ctl/top/snapshot_tests.rs
assertion_line: 235
expression: out
---
╭ REQUESTS / SEC ──────────────────────╮╭ LATENCY p99 (ms) ────────────────────╮
│567000 req/s                          ││220 ms                                │
│312 client conns · 87 active sessions ││max p99 across clusters · 500 ms thres│
│                                    █ ││                                      │
│                                    █ ││                                      │
│                                    █ ││                                      │
│                                    █ ││                                      │
│                                    █ ││                                    ▄▄│
│                                    █ ││                                    ██│
│                                    █ ││                                    ██│
│                                    █ ││                                    ██│
╰──────────────────────────────────────╯╰──────────────────────────────────────╯
╭ SERVICE TIME p99 (ms) ───────────────╮╭ SATURATION (%) ──────────────────────╮
│12 ms                                 ││45 %                                  │
│sozu request-processing p99 · ●       ││slab/buffer; warn at 80 % · ●         │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                    ▄▄│
│                                      ││                                    ██│
│                                      ││                                    ██│
│                                    ▁▁││                                    ██│
╰──────────────────────────────────────╯╰──────────────────────────────────────╯
